[package]
name = "ackbarx"
version = "0.5.0"
edition = "2021"
description = "AckbarX - SNMP Trap Forwarder with HTTP endpoint integration by GoCortex.io"
authors = ["GoCortex.io"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Removed SQLite - using file-based storage
# Removed ASN.1 dependencies - using simplified SNMP parsing
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
base64 = "0.21"
futures-util = "0.3"
ipnet = "2.9"
